--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -34,11 +34,11 @@
                     <div class="uq-header__search-scope">
                         <div class="uq-header__search-radio-wrapper">
                             <div class="uq-header__search-form-item">
-                                <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="uq-header__search-form-radio">
+                                <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="uq-header__search-radio">
                                 <label for="edit-as_sitesearch-off" class="uq-header__search-option">Search all UQ websites</label>
                             </div>
                             <div class="uq-header__search-form-item">
-                                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="uq-header__search-form-radio">
+                                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="uq-header__search-radio">
                                 <label for="edit-as_sitesearch-on" class="uq-header__search-option">Search this website (future-students.uq.edu.au)</label>
                             </div>
                         </div>
