refactor tidy up

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -268,7 +268,7 @@
                 }
 
                 &:checked {
-                    border-color: core.$uq-white;
+                    border-color: core.$uq-white !important;
                     border-width: 2px;
 
                     &:focus {
