--- a/packages/hero/src/scss/_component.scss
+++ b/packages/hero/src/scss/_component.scss
@@ -1,8 +1,56 @@
 @use '@uqds/core/src/scss/_global' as core;
-@use 'global' as *;
+@use '@uqds/grid/src/scss/global' as grid;
 
 // Hero
 
 .hero {
-  background-color: #51247A;
+  position: relative;
+
+  &__content {
+    padding-top: core.$space-xxl;;
+    padding-bottom: core.$space-ul;;
+    color: white;
+    z-index: 2;
+  }
+
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+  
+    & picture,
+    & img {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
+  
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(100deg, rgb(81, 36, 122) 36%, transparent 70%);
+      opacity: 0.8;
+      z-index: 1;
+    }
+
+    &--large {
+      display: none;
+
+      @media #{core.$screen-md-up} {
+        display: block;
+      }
+    }
+  }
+
 }
