--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -1,8 +1,18 @@
 <!-- Page header (default) -->
 <div class="hero">  
-  <div class="uq-grid">
-    <div class="uq-grid__col uq-grid__col--6">
-      <h1 class="page__title">Page title</h1>
+  <div class="hero__image">
+    <div class="hero__image--small">
+      <img src="https://picsum.photos/375/250" />
+    </div>
+    <div class="hero__image--large">
+      <img src="https://picsum.photos/1920/540" />
+    </div>
+  </div>
+  <div class="hero__content">
+    <div class="hero__text">
+      <h1>Start postgraduate study online</h1>
+      <p class="hero__subtext">Apply by June 30</p>
+      <p><a class="button button--primary" href="#">Learn more</a></p>
     </div>
   </div>
 </div>
