--- a/packages/tabs/src/scss/_global.scss
+++ b/packages/tabs/src/scss/_global.scss
@@ -5,3 +5,5 @@ $panel-border: core.$uq-neutral-light60; //e1e1e1;
 $active-color: core.$uq-yellow; //ffa200;
 $app-wrapper: core.$uq-neutral-light20; //f8f8f9;
 $tabs-color: core.$uq-neutral-dark60; //51247a;
+
+$tab-border-color: core.$uq-neutral-light60; //e1e1e1;
