--- a/packages/hero/src/scss/_component.scss
+++ b/packages/hero/src/scss/_component.scss
@@ -7,16 +7,17 @@
   position: relative;
 
   &__content {
-    padding-top: core.$space-xxl;;
-    padding-bottom: core.$space-ul;;
-    color: white;
+    padding-top: core.$space-xxl;
+    padding-bottom: core.$space-ul;
     z-index: 2;
+    position: relative;
+    color: white;
 
     @media #{core.$screen-md-up} {
       display: flex;
       justify-content: space-between;
-      padding-top: 6.5rem;
-      padding-bottom: 6.5rem;
+      padding-top: 8.5rem;
+      padding-bottom: 8.5rem;
     }
   }
 
@@ -26,8 +27,9 @@
     }
 
     & h1 {
+      color: inherit;
       margin-top: 0;
-      margin-bottom: var(--spacing-s);
+      margin-bottom: core.$space-sm;
     }
   
     & *:last-child {
@@ -61,8 +63,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(100deg, rgb(81, 36, 122) 36%, transparent 70%);
-      opacity: 0.8;
+      background: linear-gradient(100deg, rgb(81, 36, 122)36%, transparent 70%);
+      //background: linear-gradient(100deg, rgb(81, 36, 122) 36%, transparent 70%);
+      mix-blend-mode: normal;
+      opacity: 1;
       z-index: 1;
     }
 
