--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -8,8 +8,8 @@
       <img src="https://picsum.photos/1920/540" />
     </div>
   </div>
-  <div class="hero__content">
-    <div class="hero__text">
+  <div class="hero__content uq-grid">
+    <div class="hero__text uq-grid__col uq-grid__col--6">
       <h1>Start postgraduate study online</h1>
       <p class="hero__subtext">Apply by June 30</p>
       <p><a class="button button--primary" href="#">Learn more</a></p>
