--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -12,7 +12,7 @@
     <div class="hero__text uq-grid__col uq-grid__col--6">
       <h1>Start postgraduate study online</h1>
       <p class="hero__subtext">Apply by June 30</p>
-      <p><a class="button button--primary" href="#">Learn more</a></p>
+      <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
   </div>
 </div>
