--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -16,4 +16,22 @@
     </div>
   </div>
 </div>
+<br>
+<!-- Page header (default) -->
+<div class="hero">  
+  <div class="hero__image">
+    <div class="hero__image--small">
+      <img src="https://picsum.photos/375/250" />
+    </div>
+    <div class="hero__image--large">
+      <img src="https://picsum.photos/1920/540" />
+    </div>
+  </div>
+  <div class="hero__content uq-grid">
+    <div class="hero__text uq-grid__col uq-grid__col--6">
+      <h1>New to UQ in 2021?</h1>
+      <p><a class="uq-button" href="#">Get started</a></p>
+    </div>
+  </div>
+</div>
 
