--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -2,252 +2,13 @@
 @use 'global' as *;
 
 // Tabs
-//
-// Variants for tabs
-// .tabs--outline - Rectangle outline style for tab group
-// .tabs--boxed - Rectangle box style for each tab
-// .tabs--square - Square box style for each tab
-// .tabs--two - Style for two tabs
-// .tabs--three - Style for three tabs
-// .tabs--four - Style for four tabs
-// .tabs--five - Style for five tabs
-//
-// Variants for tabs content
-// .tabs-content--container - Rectangle box style for tab content
-
-// Tabs
-.tabs-section {
-  // Tabs - default
-  .tabs {
-    padding: core.$space-none;
-    margin: core.$space-none;
-
-    // Clearfix from Foundation 5
-    &:before, &:after { content: " "; display: table; }
-    &:after { clear: both; }
-
-    // Foundaton classname for li wrapping tab title
-    .tab-title {
-      text-align: center;
-      float: left;
-      list-style: none;
-      margin-bottom: core.$space-none;
-      position: relative;
-      border-bottom: 1px solid $panel-border;
-
-      // active tab
-      &.active {
-        border-bottom: 1px solid $tabs-color;
-        color: $tabs-color;
-      }
-
-      // tab title
-      a {
-        color: $tabs-color;
-        background: core.$uq-white;
-        display: block;
-        padding: core.$space;
-
-        &:hover,
-        &:focus {
-          text-decoration: none;
-        }
-      }
-
-      // tab sub-title
-      .tabs__sub-title {
-        display: block;
-        font-weight: core.$font-weight-normal;
-        font-size: 0.6875rem;
-
-        @media #{core.$screen-md-up} {
-          font-size: core.$font-size-s;
-        }
-      }
-    }
-
-    // ***********************************
-    // Tabs - fixed
-    &--fixed {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 99;
-    }
-
-    // ***********************************
-    // Tabs - two
-    &--two {
-      .tab-title {
-        width: 50%;
-      }
-    }
-
-    // ***********************************
-    // Tabs - three
-    &--three {
-      .tab-title {
-        width: 33.33%;
-      }
-    }
-
-    // ***********************************
-    // Tabs - four
-    &--four {
-      .tab-title {
-        width: 25%;
-      }
-    }
-
-    // ***********************************
-    // Tabs - five
-    &--five {
-      .tab-title {
-        width: 20%;
-      }
-    }
-
-    // ***********************************
-    // Tabs - Outline
-    &--outline {
-      background: core.$uq-white;
-      border: 1px solid $panel-border;
-      border-bottom: 0;
-
-      // Foundaton classname for li wrapping tab title
-      .tab-title {
-        font-weight: core.$font-weight-bold;
-
-        // active tab
-        &.active {
-          border-bottom-color: $active-color;
-        }
-
-        // tab title
-        a {
-          padding: core.$space;
-        }
-      }
-    }
-
-    // ***********************************
-    // Tabs - Boxed
-    &--boxed {
-      border-left: 1px solid $panel-border;
-      border-top: 0;
-      border-bottom: 0;
-      border-right: 0;
-      margin-bottom: -1px;
-
-      // Foundaton classname for li wrapping tab title
-      .tab-title {
-        font-weight: core.$font-weight-bold;
-        border: 1px solid $panel-border;
-        border-left: 0;
-        background: $app-wrapper;
-
-        // active tab
-        &.active {
-          border-bottom-color: core.$uq-white;
-          background: core.$uq-white;
-        }
-
-        // tab title
-        a {
-          padding: core.$space core.$space-lg;
-        }
-      }
-    }
-
-    // ***********************************
-    // Tabs - Square
-    &--square {
-      background: core.$uq-white;
-      border: 1px solid $panel-border;
-      border-right: 0;
-      border-bottom: 0;
-
-      // Foundaton classname for li wrapping tab title
-      .tab-title {
-        font-weight: core.$font-weight-thin;
-        border-right: 1px solid $panel-border;
-
-        // active tab
-        &.active {
-          border-bottom-color: $active-color;
-        }
-
-        // tab title
-        a {
-          padding: core.$space-xl core.$space-sm core.$space;
-          text-align: center;
-          font-size: 1.4rem;
-          background: core.$uq-white;
-        }
-      }
-    }
-  }
-
-  // ***********************************
-  // Tabs content
-  // Foundaton classname for section wrapping tab content
-  .tabs-content {
-    width: 100%;
-
-    // Foundaton classname for tab content
-    .content {
-      display: none;
-
-      &.active {
-        display: block;
-      }
-    }
-
-    // Content tabs container
-    &--container {
-      border: 1px solid $panel-border;
-      border-top: 0;
-      background: core.$uq-white;
-
-      // Foundaton classname for tab content
-      .content {
-        border-top: 1px solid $panel-border;
-      }
-    }
-  }
-}
-
-
-
-
-
-// Tabs
 .tabs {
 
-  // Lined variant
-  &--lined {
-    .tabs__tab-list {
-      border-bottom: 1px solid $tab-border-color;
-    }
-
-    .tabs__tab {
-      border-bottom: 1px solid $tab-border-color;
-      margin-bottom: -1px;
-
-      &--active {
-        background-color: core.$uq-white;
-        border-bottom: 1px solid core.$uq-purple;
-
-        &:hover,
-        &:focus {
-          background-color: core.$uq-white;
-        }
-      }
-    }
+  * {
+    box-sizing: border-box;
   }
 
-  // Outline variant
+  // Default / Outline variant
   &--outline {
     .tabs__tab-list {
       border-bottom: 1px solid $tab-border-color;
@@ -286,8 +47,11 @@
       border: 1px solid $tab-border-color;
       border-radius: core.$space-none;
       margin-right: core.$space-none;
-      margin-left: -1px;
       margin-bottom: -1px;
+
+      &:not(:first-child) {
+        margin-left: -1px;
+      }
 
       &:hover,
       &:focus {
@@ -306,8 +70,38 @@
     }
   }
 
-  // Compact variant
-  &--compact {
+  // Lined variant
+  &--lined {
+    .tabs__tab-list {
+      border-bottom: 1px solid $tab-border-color;
+      overflow: visible;
+    }
+
+    .tabs__tab {
+      border-bottom: 1px solid $tab-border-color;
+      margin-bottom: -1px;
+
+      &--active {
+        background-color: core.$uq-white;
+        border-bottom: 1px solid core.$uq-purple;
+
+        &:hover,
+        &:focus {
+          background-color: core.$uq-white;
+        }
+      }
+    }
+  }
+
+  // Full width variant
+  &--full-width {
+    .tabs__tab {
+      flex: 1 1 auto;
+    }
+  }
+
+  // Small variant
+  &--small {
     .tabs__tab {
       padding: core.$space-sm core.$space;
 
@@ -324,23 +118,16 @@
     }
   }
 
-  // Full width variant
-  &--full-width {
-    .tabs__tab {
-      flex: 1 1 auto;
-    }
-  }
-
   // Tab list
   &__tab-list {
     position: relative;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
-    overflow: auto; 
+    overflow-x: scroll; 
+    overflow-y: hidden; 
     padding: core.$space-none;
     margin: core.$space-none;
-    overflow: visible;
   }
 
   // Tab
@@ -354,6 +141,7 @@
     background-color: core.$uq-white;
     border-radius: core.$space-xs core.$space-xs core.$space-none core.$space-none;
     border: none;
+    text-align: center;
     cursor: pointer;
 
     @media #{core.$screen-md-up} {
@@ -369,7 +157,12 @@
     &--active {
       color: core.$uq-purple;
       background-color: core.$uq-white;
-      font-weight: bold;
+      font-weight: core.$font-weight-bold;
+    }
+
+    > span {
+      display: inline-block;
+      margin: 0 auto core.$space-sm;
     }
   }
 
