button fix amends

--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -28,6 +28,8 @@
     }
     .uq-button {
       text-decoration: underline;
+      background-color: core.$uq-purple-dark;
+      border-color: core.$uq-purple-dark;
     }
   }
   
