--- a/packages/hero/src/scss/_component.scss
+++ b/packages/hero/src/scss/_component.scss
@@ -9,17 +9,10 @@
 
   &__content {
     color: white;
-    padding-top: 0;
-    padding-bottom: core.$space-lg;
+    padding-top: 6.5rem;
+    padding-bottom: 6.5rem;
     position: relative;
     z-index: 2;
-
-    @media #{core.$screen-md-up} {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 8.5rem;
-      padding-bottom: 8.5rem;
-    }
   }
 
   &__text {
@@ -36,10 +29,6 @@
   
     & *:last-child {
       margin-bottom: 0;
-    }
-
-    @media #{core.$screen-md-up} {
-      width: 45%;
     }
   }
 
@@ -73,20 +62,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      //background: #51247A;
       background: linear-gradient(100deg, rgb(81, 36, 122) 36%, transparent 70%);
       mix-blend-mode: normal;
       opacity: 1;
       z-index: 1;
-    }
-
-    @media #{core.$screen-md-down} {
-      position: relative;
-      min-height: 6rem;
-
-      &::before {
-        background: linear-gradient(360deg, rgb(81, 36, 122) 0%, transparent 42%);
-      }
     }
 
     &--small {
@@ -107,6 +86,28 @@
         display: block;
       }
     }
+
+    @media #{core.$screen-md-down} {
+      position: relative;
+      min-height: 6rem;
+
+      &::before {
+        background: linear-gradient(360deg, rgb(81, 36, 122) 0%, transparent 42%);
+      }
+    }
+  }
+
+  &--feature-image {
+
+    & .hero__content {
+
+      padding-top: 0; 
+
+      @media #{core.$screen-md-up} {
+        padding-top: 6.5rem;
+      }
+    }
+   
   }
 
 }
