--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -20,20 +20,10 @@
   
   &:hover,
   &:focus {
-    box-shadow: 0 core.$space-sm core.$space-md rgba(core.$uq-neutral-dark80, 0.2);
-
-    a {
-      color: core.$link-hover;
-      text-decoration: underline;
-    }
-    .uq-button {
-      text-decoration: underline;
-      background-color: core.$uq-purple-dark;
-      border-color: core.$uq-purple-dark;
-    }
+    box-shadow: 0 core.$space-sm core.$space rgba(core.$uq-neutral-dark80, 0.15);
   }
   
-  &__link__outer {
+  &__link-outer {
     position: absolute;
     top: 0;
     right: 0;
@@ -43,7 +33,7 @@
     z-index: 10;
   }
 
-  &__image__wrapper {
+  &__image-wrapper {
     max-height: 190px;
     overflow: hidden;
 
@@ -68,7 +58,7 @@
     }
   }
 
-  &__content__wrapper {
+  &__content-wrapper {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -111,7 +101,7 @@
       font-size: core.$font-size-xxl;
     }
 
-    &__super {
+    &-super {
       font-size: core.$font-size-s;
       font-weight: 500;
       color: core.$uq-purple-light;
@@ -165,7 +155,7 @@
         flex-direction: row;
       }
   
-      &__image__wrapper {
+      &__image-wrapper {
         min-width: 100%;
         overflow: hidden;
 
@@ -182,7 +172,7 @@
           padding-bottom: 0%;
         }
       }
-      &__content__wrapper {
+      &__content-wrapper {
         min-width: 100%;
 
         @media #{core.$screen-md-up} {
