--- a/packages/grid/src/scss/_global.scss
+++ b/packages/grid/src/scss/_global.scss
@@ -63,9 +63,9 @@ $max-container-width: 71.25rem !default;
 }
 
 /**
- * Full-width container
+ * For nested containers (reverses layout-containment)
  */
-@mixin layout-full-width {
+@mixin layout-nested {
   margin-left: -(nth($schema-base, 2) / 2);
   margin-right: -(nth($schema-base, 2) / 2);
   max-width: none;
@@ -81,10 +81,28 @@ $max-container-width: 71.25rem !default;
   }
 }
 
+/**
+ * For full-width containers (adds half gutter width to horizontal margins)
+ */
+@mixin layout-full-width {
+  margin-left: nth($schema-base, 2) / 2;
+  margin-right: nth($schema-base, 2) / 2;
+
+  @media #{core.$screen-md-up} {
+    margin-left: nth($schema-md, 2) / 2;
+    margin-right: nth($schema-md, 2) / 2;
+  }
+
+  @media #{core.$screen-xl-up} {
+    margin-left: nth($schema-xl, 2) / 2;
+    margin-right: nth($schema-xl, 2) / 2;
+  }
+}
+
 /*
  * Convert fraction to percentage
  */
- @function _grid-fraction-to-percent(
+@function _grid-fraction-to-percent(
   $columns,
   $column-count: nth($schema-base, 1)) {
 
