--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="hero__content uq-grid">
-    <div class="hero__text uq-grid__col uq-grid__col--xl-6">
+    <div class="hero__text uq-grid__col--6 uq-grid__col--xl-6">
       <h1>Start postgraduate study online</h1>
       <p class="hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
